# Automated-RULA-Assessment-System

./: analyze_angle_diffs.py  compare_frame405.py  export_joint_coords.py  extract_keyframes.py  merge_frame_answer_pdfs.py  pyproject.toml  record_neck_angles.py  trim_videos.py
.claude/: settings.json  settings.local.json
ai_docs/: implementation_plan_mediapipe.md  joint_anomaly_detection.md  plan.md  rtmposew3d_integration_plan.md
src/rula_realtime_app/: __main__.py
src/rula_realtime_app/core/: __init__.py  config.py  pose_detector.py  realtime_processor.py  rula_calculator.py  video_file_processor.py
src/rula_realtime_app/ui/: components.py  dialogs.py  history_window.py  language.py  realtime_window.py  result_window.py  styles.py  upload_window.py
