[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rula_realtime_app"]

[project]
name = "rula-rtmpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "onnxruntime-gpu>=1.24.4",
    "opencv-python>=4.13.0.92",
    "rtmlib>=0.0.15",
    "pyqt6>=6.9.1",
    "mediapipe==0.10.14",
    "matplotlib>=3.10.7",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-nvrtc-cu12>=12.9.86",
    "nvidia-cuda-runtime-cu12>=12.0.0",
    "pillow>=12.1.1",
    "pypdf>=6.12.2",
]

[project.scripts]
rula = "rula_realtime_app.__main__:main"
